--- a/views/users/changePassword.ejs
+++ b/views/users/changePassword.ejs
@@ -89,25 +89,18 @@
                         <nav class="main-nav">
                             <ul class="menu sf-arrows">
                                 <li class="megamenu-container active">
-                                    <a href="index.html" class="sf-with-ul">Home</a>
+                                    <a href="/loadHome" class="sf-with-ul">Home</a>
 
-                                  
+
                                 </li>
+                               
                                 <li>
-                                    <a href="category.html" class="sf-with-ul">Shop</a>
+                                    <a href="/loadProducts" class="sf-with-ul">Product</a>
 
-                                
-                                </li>
-                                <li>
-                                    <a href="product.html" class="sf-with-ul">Product</a>
 
-                                  
-                                </li>
-                                <li>
-                                    <a href="#" class="sf-with-ul">Pages</a>
 
-                                  
                                 </li>
+                               
                          
                             </ul><!-- End .menu -->
                         </nav><!-- End .main-nav -->
