--- a/views/users/detailedProduct.ejs
+++ b/views/users/detailedProduct.ejs
@@ -84,11 +84,7 @@
 
                                   
                                 </li>
-                                <li>
-                                    <a href="category.html" class="sf-with-ul">Shop</a>
-
-                                  
-                                </li>
+                          
                                 <li>
                                     <a href="/loadProducts" class="sf-with-ul">Product</a>
 
@@ -438,10 +434,10 @@
                 <div class="col-6">
                     <figure class="product-media">
                         <a href="product.html">
-                            <img src="/assets/images/products/sticky/product-1.jpg" alt="Product image">
+                            <img src="/multerImage/<%=data.images[0]%>" alt="Product image">
                         </a>
                     </figure><!-- End .product-media -->
-                    <h4 class="product-title"><a href="product.html">Dark yellow lace cut out swing dress</a></h4><!-- End .product-title -->
+                    <h4 class="product-title"><a href="product.html"><%=data.name%></a></h4><!-- End .product-title -->
                 </div><!-- End .col-6 -->
 
                 <div class="col-6 justify-content-end">
