--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -103,11 +103,14 @@
                         </a>
                     </div><!-- End .header-left -->
                     <div class="header-right">
-                        <% if(typeof wishlist !== 'undefined'){ %>
+                        <% if(wishlist && wishlist.products.length){ %>
                         <a href="/whishlist" class="wishlist-link">
                             <i class="icon-heart-o"></i>
                             
                             <span  class="wishlist-txt">My Wishlist</span>
+                            <span class="cart-count" style="width: 2px; font-size: small; color: red; margin-bottom: 20px;  ;"><%=wishlist.products.length %></span>
+
+
                         </a>
                         <%}else{%>
                             <a href="/whishlist" class="wishlist-link">
